--- a/index.html
+++ b/index.html
@@ -6,7 +6,28 @@
     <link rel="stylesheet" href="style.css">
     <title>Agrinho 2024</title>
 </head>
-<body>
-    
+<body</head>
+
+<header><div class="cabecalho"></div></header>
+
+
+
+<main class="principal">
+
+
+
+
+<footer class="rodape"></footer>
+
+
+
+
+
+
+
+
+
+
+
 </body>
 </html>
