--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body</head>
 
-<header><div class="cabecalho"></div></header>
+<header> class="cabecalho">
 <img src="https://cdn.vnda.com.br/x450/ceramicasa/2021/02/19/10_2_8_869_QUADRADO20X2021CinzaClaro.jpg" alt="" class="cabecalho_imagem">
 <nav class="cabecalho_menu">
 <ul class="cabecalho_menulista">
@@ -21,7 +21,7 @@
 
 
 </nav>
-
+</header>
 <main class="principal">
 
 
