--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="cabecalho">
-        <img src="https://cdn.vnda.com.br/x450/ceramicasa/2021/02/19/10_2_8_869_QUADRADO20X2021CinzaClaro.jpg" alt="" class="cabecalho-imagem">
+        <img src="download (7).jfif" alt="" class="cabecalho-imagem">
         <nav class="cabecalho-menu">
             <ul class="cabecalho-menu-lista">
                 <li class="cabecalho-menu-listaitem"><a href="index.html">HOME</a>
@@ -26,7 +26,7 @@
     </header>
     <main class="principal">
        <section class="sobre">
-        <img src="https://cdn.vnda.com.br/x450/ceramicasa/2021/02/19/10_2_8_869_QUADRADO20X2021CinzaClaro.jpg" alt="" class="sobre_imagem">
+        <img src="download (8).jfif" alt="" class="sobre_imagem">
         <div class="sobre_texto">
             <h2 class="sobre_texto-titulo">Aqui será nosso titulo</h2>
             <p class="sobre_texto-conteudo">
@@ -37,7 +37,7 @@
        </section>
        <section class="elementos">
         <div class="elementos__div">
-            <img src="https://cdn.vnda.com.br/x450/ceramicasa/2021/02/19/10_2_8_869_QUADRADO20X2021CinzaClaro.jpg" alt="" class="elementos__imagem">
+            <img src="download 9" alt="" class="elementos__imagem">
             <h1 class="elementos__titulo">
                 titulo da minha imagem
             </h1>
@@ -46,7 +46,7 @@
             </p>
         </div>
         <div class="elementos__div">
-            <img src="https://cdn.vnda.com.br/x450/ceramicasa/2021/02/19/10_2_8_869_QUADRADO20X2021CinzaClaro.jpg" alt="" class="elementos__imagem">
+            <img src="download (10).jfif" alt="" class="elementos__imagem">
             <h1 class="elementos__titulo">
                 titulo da minha imagem
             </h1>
@@ -55,7 +55,7 @@
             </p>
         </div>
         <div class="elementos__div">
-            <img src="https://cdn.vnda.com.br/x450/ceramicasa/2021/02/19/10_2_8_869_QUADRADO20X2021CinzaClaro.jpg" alt="" class="elementos__imagem">
+            <img src="download (11).jfif" alt="" class="elementos__imagem">
             <h1 class="elementos__titulo">
                 titulo da minha imagem
             </h1>
@@ -64,7 +64,7 @@
             </p>
         </div>
         <div class="elementos__div">
-            <img src="https://cdn.vnda.com.br/x450/ceramicasa/2021/02/19/10_2_8_869_QUADRADO20X2021CinzaClaro.jpg" alt="" class="elementos__imagem">
+            <img src=" "" alt="" class="elementos__imagem">
             <h1 class="elementos__titulo">
                 titulo da minha imagem
             </h1>
@@ -73,7 +73,7 @@
             </p>
         </div>
         <div class="elementos__div">
-            <img src="https://cdn.vnda.com.br/x450/ceramicasa/2021/02/19/10_2_8_869_QUADRADO20X2021CinzaClaro.jpg" alt="" class="elementos__imagem">
+            <img src="download (12).jfif" alt="" class="elementos__imagem">
             <h1 class="elementos__titulo">
                 titulo da minha imagem
             </h1>
@@ -82,7 +82,7 @@
             </p>
         </div>
         <div class="elementos__div">
-            <img src="https://cdn.vnda.com.br/x450/ceramicasa/2021/02/19/10_2_8_869_QUADRADO20X2021CinzaClaro.jpg" alt="" class="elementos__imagem">
+            <img src="download (13).jfif" alt="" class="elementos__imagem">
             <h1 class="elementos__titulo">
                 titulo da minha imagem
             </h1>
@@ -91,7 +91,7 @@
             </p>
         </div>
         <div class="elementos__div">
-            <img src="https://cdn.vnda.com.br/x450/ceramicasa/2021/02/19/10_2_8_869_QUADRADO20X2021CinzaClaro.jpg" alt="" class="elementos__imagem">
+            <img src="download (14).jfif" alt="" class="elementos__imagem">
             <h1 class="elementos__titulo">
                 titulo da minha imagem
             </h1>
