--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
        </section>
        <section class="elementos">
         <div class="elementos__div">
-            <img src="download 9" alt="" class="elementos__imagem">
+            <img src="download (9).jfif" alt="" class="elementos__imagem">
             <h1 class="elementos__titulo">
                 titulo da minha imagem
             </h1>
@@ -64,7 +64,7 @@
             </p>
         </div>
         <div class="elementos__div">
-            <img src=" "" alt="" class="elementos__imagem">
+            <img src="download (15).jfif"" alt="" class="elementos__imagem">
             <h1 class="elementos__titulo">
                 titulo da minha imagem
             </h1>
