--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </p>
         </div>
         <div class="elementos__div">
-            <img src="download (15).jfif"" alt="" class="elementos__imagem">
+            <img src="download (15).jfif" alt="" class="elementos__imagem">
             <h1 class="elementos__titulo">
                 titulo da minha imagem
             </h1>
