--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
        <section class="sobre">
         <img src="download (8).jfif" alt="" class="sobre_imagem">
         <div class="sobre_texto">
-            <h2 class="sobre_texto-titulo">Aqui será nosso titulo</h2>
+            <h2 class="sobre_texto-titulo">A importância da agricultura</h2>
             <p class="sobre_texto-conteudo">
-                Aqui será um texto bem longo, explicando para que server seu site.
+                Esse site de agricultura serve para fornecer informações e recursos essenciais que ajudam produtores rurais a otimizar suas práticas e melhorar a produtividade.
             </p>
 
         </div>
