--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
         <div class="elementos__div">
             <img src="download (9).jfif" alt="" class="elementos__imagem">
             <h1 class="elementos__titulo">
-                titulo da minha imagem
+                Semear
             </h1>
             <p class="elementos__texto">
-                texto referente a imagem
+                Semear em linha é importante porque permite um plantio mais uniforme, facilita o manejo das culturas e melhora a eficiência na aplicação de insumos, resultando em colheitas mais consistentes e maiores rendimentos.
             </p>
         </div>
         <div class="elementos__div">
