--- a/index.html
+++ b/index.html
@@ -48,25 +48,25 @@
         <div class="elementos__div">
             <img src="download (10).jfif" alt="" class="elementos__imagem">
             <h1 class="elementos__titulo">
-                titulo da minha imagem
+                Máquinas agrícolas 
             </h1>
             <p class="elementos__texto">
-                texto referente a imagem
+                Máquinas agrícolas servem para realizar tarefas como plantio, colheita e manejo de culturas de forma mais eficiente, rápida e precisa, otimizando o trabalho e aumentando a produtividade.
             </p>
         </div>
         <div class="elementos__div">
             <img src="download (11).jfif" alt="" class="elementos__imagem">
             <h1 class="elementos__titulo">
-                titulo da minha imagem
+                divisões 
             </h1>
             <p class="elementos__texto">
-                texto referente a imagem
+                As divisões na agricultura são feitas com base em tipos de cultivo, sistemas de produção, e características do solo e clima, facilitando a adaptação das práticas e otimização da produção. Elas ajudam a aplicar técnicas específicas e gerenciar recursos de forma mais eficiente.
             </p>
         </div>
         <div class="elementos__div">
             <img src="download (15).jfif" alt="" class="elementos__imagem">
             <h1 class="elementos__titulo">
-                titulo da minha imagem
+                
             </h1>
             <p class="elementos__texto">
                 texto referente a imagem
