--- a/index.html
+++ b/index.html
@@ -66,37 +66,37 @@
         <div class="elementos__div">
             <img src="download (15).jfif" alt="" class="elementos__imagem">
             <h1 class="elementos__titulo">
-                
+                alimentos 
             </h1>
             <p class="elementos__texto">
-                texto referente a imagem
+                Alimentos frutos da agricultura incluem grãos como arroz e trigo, legumes como cenoura e tomate, frutas como maçã e banana, e tubérculos como batata e mandioca. Esses produtos são cultivados para consumo humano e animal, fornecendo a base de nossa dieta.
             </p>
         </div>
         <div class="elementos__div">
             <img src="download (12).jfif" alt="" class="elementos__imagem">
             <h1 class="elementos__titulo">
-                titulo da minha imagem
+                agrotóxicos 
             </h1>
             <p class="elementos__texto">
-                texto referente a imagem
+                Agrotóxicos são substâncias químicas usadas na agricultura para controlar pragas, doenças e plantas daninhas, visando aumentar a produtividade das culturas. Seu uso deve ser manejado cuidadosamente devido aos potenciais impactos ambientais e riscos à saúde.
             </p>
         </div>
         <div class="elementos__div">
             <img src="download (13).jfif" alt="" class="elementos__imagem">
             <h1 class="elementos__titulo">
-                titulo da minha imagem
+                agricultores 
             </h1>
             <p class="elementos__texto">
-                texto referente a imagem
+                Agricultores são profissionais que cultivam a terra e criam culturas, desempenhando um papel crucial na produção de alimentos e na gestão de recursos naturais. Eles utilizam conhecimentos técnicos e práticas tradicionais para otimizar a produtividade e garantir a sustentabilidade das atividades agrícolas.
             </p>
         </div>
         <div class="elementos__div">
             <img src="download (14).jfif" alt="" class="elementos__imagem">
             <h1 class="elementos__titulo">
-                titulo da minha imagem
+                sua finalidade 
             </h1>
             <p class="elementos__texto">
-                texto referente a imagem
+                A finalidade da agricultura é produzir alimentos e matérias-primas essenciais para a sobrevivência e o bem-estar humano, além de promover a gestão sustentável dos recursos naturais. Ela também contribui para a economia e o desenvolvimento rural.
             </p>
         </div>
             </section>
